[project]
name = "strands-agents-learning"
version = "0.1.0"
description = "Learn Strands Agent Framework through 7 progressive, hands-on lessons"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kevin Tan", email = "jingzheng.tan@gmail.com"},
]
requires-python = ">=3.10"
keywords = ["strands", "agents", "ai", "learning", "tutorial", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "strands-agents[a2a]>=1.12.0",
    "python-dotenv>=1.0.0",
    "openai>=1.107.2",
    "anthropic>=0.25.0",
    "google-genai>=0.1.0",
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "ipython>=8.18.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.0",
    "rich>=13.7.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
tools = [
    "strands-agents-tools>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/jztan/strands-agents-learning"
Repository = "https://github.com/jztan/strands-agents-learning.git"
Issues = "https://github.com/jztan/strands-agents-learning/issues"
Documentation = "https://github.com/jztan/strands-agents-learning#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
